<resources>
    <string name="app_name">Low Cost Path</string>
    <string name="action_settings">Settings</string>
    <string name="no_results">No results</string>
    <string name="select_a_test_select_data_set_message">Select a test set from below:</string>
    <string name="click_go_message">Click below to find the lowest cost path:</string>
    <string name="go_button_title">GO!</string>
    <string name="example_1_button_title">Sample 1</string>
    <string name="example_2_button_title">Sample 2</string>
    <string name="example_3_button_title">Sample 3</string>
    <string name="example_4_button_title">Sample 4</string>
    <string name="example_5_button_title">Sample 5</string>
    <string name="example_6_button_title">Sample 6</string>
    <string name="example_7_button_title">Sample 7</string>
    <string name="example_8_button_title">Sample 8</string>
    <string name="example_9_button_title">Sample 9</string>
    <string name="example_10_button_title">Sample 10</string>
    <string name="example_11_button_title">Sample 11</string>
    <string name="example_12_button_title">Sample 12</string>
    <string name="example_13_button_title">Sample 13</string>
    <string name="grid_contents_title">Grid Contents</string>
    <string name="grid_contents_default">Grid is empty</string>
    <string name="results_title">Results</string>
</resources>
