<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LowCostPathFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/adjusted_scroll_content_bottom_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/select_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/select_a_test_select_data_set_message" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/load_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/select_label">
                <LinearLayout
                    android:id="@+id/buttonLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/grid_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_1_button_title" />
                <Button
                    android:id="@+id/grid_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_2_button_title" />
                <Button
                    android:id="@+id/grid_3_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_3_button_title" />
                <Button
                    android:id="@+id/grid_4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_4_button_title" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/buttonLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/grid_5_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_5_button_title" />
                <Button
                    android:id="@+id/grid_6_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_6_button_title" />
                <Button
                    android:id="@+id/grid_7_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_7_button_title" />
                <Button
                    android:id="@+id/grid_8_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_8_button_title" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/buttonLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/grid_9_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_9_button_title" />
                <Button
                    android:id="@+id/grid_10_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_10_button_title" />
                <Button
                    android:id="@+id/grid_11_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_11_button_title" />
                <Button
                    android:id="@+id/grid_12_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_12_button_title" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/buttonLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                    android:id="@+id/grid_13_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_13_button_title" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/go_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/load_buttons"
                android:layout_marginBottom="10dp"
                android:text="@string/click_go_message" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/go_label"
                android:layout_marginBottom="20dp"
                android:enabled="false"
                android:text="@string/go_button_title" />

            <TextView
                android:id="@+id/grid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/go_button"
                android:layout_marginBottom="5dp"
                android:text="@string/grid_contents_title" />

            <TextView
                android:id="@+id/grid_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_label"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:fontFamily="monospace"
                android:background="@drawable/back"
                android:text="@string/grid_contents_default" />

            <TextView
                android:id="@+id/results_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_contents"
                android:layout_marginBottom="5dp"
                android:text="@string/results_title" />

            <LinearLayout
                android:id="@+id/results_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:background="@drawable/back"
                android:layout_below="@id/results_label">
                <TextView
                    android:id="@+id/results_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
                <TextView
                    android:id="@+id/results_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace"
                    android:text="@string/no_results" />
                <TextView
                    android:id="@+id/results_path_taken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
